--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "prettier": "2.7.1",
     "prop-types": "^15.8.1",
     "webpack": "^5.73.0"
   }
